[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "control_de_ajuste"
version = "0.1.0"
description = ""
authors = {name = "Hannaky-29",email = "maria.maluche.27@gmail.com"}
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
